# py-jitx-dxf

./: .gitignore  README.md  pyproject.toml
scripts/: audit_xml.py
src/jitx_dxf/: __init__.py  __main__.py  cli.py  dxf_reader.py  dxf_writer.py  jitx_codegen.py  models.py  path_assembler.py  transforms.py  xml_parser.py
tests/: test_dxf_reader.py  test_jitx_codegen.py  test_path_assembler.py  test_side_flip.py
tests/fixtures/: beeper_flex_outline.dxf  side_flip_test.xml
